--- a/trunk/LaTeX/Undervejs/programplanning.tex
+++ b/trunk/LaTeX/Undervejs/programplanning.tex
@@ -5,9 +5,10 @@ To give a more precise explanation of a program the flowchart can be formed into
 The program planing will be used to make it easier to develop the program and help to a better product in terms of structure.
 
 When the program starts, it should first ask for the bags dimensions. The user then have to decide whether to use a pre made list, reuse a list from earlier use or create a new list containing objects that should be packed. If the user decide to a make new list the program will ask the user for items that should be stored in the new list. Should the new list be empty the program will inform the user that the list that were just made is empty and ask if the user still wished to saved it in the database.
-If the user chooses to use a pre made settings the program will fetched the list from the database and if ask if these items are what the user is looking for.
+If the user chooses to use a pre made settings the program will fetched the list from the database and ask if these items are what the user is looking for.
 
-The program shall then preform the algorithms to place the items in the most efficient way regarding volume and weight. When the program succeed to place an item, the item will be marked as packed. If the program can not fit the items in any of the accessible bags the items should be marked as not packable. If the program reach the point where all items have been packed it should inform the user that the process was a success and how the user have to pack the bags. If the program does not complete the process and there are no bags left, the program should inform the user that process was incomplete. Then the program should be at the end where the user can choose to add more items, see the exiting item, see the order of packing and close the program.
+The program then preform the algorithms to place the items in the most efficient way regarding volume and weight. When the program succeed to place an item, the item will be marked as packed. If the program can not fit the items in any of the accessible bags the items will be marked as not packable. If the program reach the point where all items have been gone through it should then inform the user that the process is done and inform how the user have to pack the bags and report if there were items that could not be packed.
+At the end of the program the user can choose to add more items, see the exiting item, see the order of packing and close the program.
 
 \figur{0.9}{flowchart.JPG}{This is the flowchart of the program (not quiet finished yet)}{fig:flow}
 
