--- a/trunk/Personlige mapper/Aleksander/stuff/worksheet.tex
+++ b/trunk/Personlige mapper/Aleksander/stuff/worksheet.tex
@@ -3,6 +3,7 @@
 \begin{document}
 
 \chapter{Problem Analysis}
+\label{chap:problem}
 \input{indledning.tex}
 \input{problem.tex}
 \input{luggageallowance.tex}
@@ -11,14 +12,24 @@
 \input{thesisstatement.tex}
 \input{method.tex}
 \chapter{Theory}
+\label{theory}
 \input{IntroductionTheory.tex}
 \input{BinPackingComplexity.tex}
 \input{BinPackingProblem.tex}
 \chapter{Design}
+\label{design}
 \input{IntroductionDesign.tex}
 \input{specificationrequirement.tex}
 \input{targetgroupanalysis.tex}
 \input{programplanning.tex}
+\chapter{Development}
+\label{chap:development}
+\chapter{Testing}
+\label{testing}
+\chapter{Discussion}
+\label{discussion}
+\chapter{Conclusion}
+\label{conclusion}
 \begingroup
 	\raggedright
 	\bibliography{BibTeX/sources}	% Litteraturlisten
