--- a/trunk/LaTeX/Skal sættes i rapport/problem.tex
+++ b/trunk/LaTeX/Skal sættes i rapport/problem.tex
@@ -1,23 +1,23 @@
 \section{Problem}
-In the modern society, families or groups of friends tend to take on vacation to other countries to relax and enjoy their vacation or explore the world \citep{danskecharter}.
+In the modern society, families or groups of friends tend to go on vacation to other countries to relax and enjoy their vacation or explore the world \citep{danskecharter}.
 
-When going on a vacation or a business trip packing a suitcase is normally needed. You need all you personal items and cloth with you. The length of the stay, the purpose of the trip, and the number of people travelling together effects the weight and size of the luggage. This can be a problem due to the different rules or limits to your luggage when using different means of transformation.\\
+When going on a vacation or a business trip packing a suitcase is normally needed. You need all you personal items and clothes with you. The length of the stay, the purpose of the trip, and the number of people travelling together effects the weight and size of the luggage. This can be a problem due to the different rules or limits to your luggage when using different means of transformation.\\
 
-The time spend away affects how much clothes the traveller will need to bring and/or if the traveller will need to wash the cloth while away. A longer stay means of cause that the traveller will need more cloth. This affects the size and weight of the luggage because you will need more or fewer items with you on different trips.\\
+The time spend away affects how much clothes the traveller will need to bring and/or if the traveller will need to wash the cloth while away. A longer stay means of cause that the traveller will need more clothes. This affects the size and weight of the luggage because you will need more or fewer items with you on different trips.\\
  
-The amount of items to bring also depends on what kind of trip it is and the purpose of the trip. For example if the purpose of the trip is a sport competition, you might need to bring some equipment, you would not normally bring on a holiday trip. If it is a short business trip all you might need could be a briefcase with your papers and a suit to wear.\\
+The amount of items to bring also depends on what kind of trip it is and the purpose of the trip. For example if the purpose of the trip is a sport competition, you might need to bring some equipment, you would not normally bring on a holiday trip or other kind of trips. If it is a short business trip all you might need could be a briefcase with your papers and a suit to wear.\\
 
-The amount of luggage depends on the amount of people on the trip, because everyone needs their own personal items, and their own cloth. This can be a problem if the persons have a lot of shared items that has to be spread in different suitcases and need to be found afterwards and it might also effect the total weight of the luggage.\\
+The amount of luggage depends on the amount of people on the trip, because everyone needs their own personal items, and their own clothes. This can be a problem if the persons have a lot of shared items that has to be spread in different suitcases and need to be found afterwards and it might also effect the total weight of the luggage.\\
 
 It can be frustrating, when travelling with many and/or heavy suitcases, if you need to carry the luggage far. It can also be hard to manoeuvre if where you are suppose to walk is a small space or a narrow passage or if simply filled with a lot of people constantly blocking your way.\\
  
-There can also be a problem with too large or heavy suitcases if you are travelling by plane since this can result in a fee. The size of the fee varies from airline to airline and can be found on the airlines website\citep{altombag}. The fee has been introduced so the airline bag-handlers do not risk getting injuries by carrying too many, heavy suitcases.\\ 
+There can also be a problem with too large or heavy suitcases if you are travelling by plane since this can result in a fee. The size of the fee varies from airline to airline and can be found on the airlines website e.g.  \citep{altombag}. One of the reasons that this fee has been introduced is so the airlines bag-handlers do not risk getting injuries by carrying too many, heavy suitcases.\\ 
 To avoid this fee it can be an advantage to pack the suitcases properly and limit the choice of items to bring so the total weight does not exceed the allowed weight.\\
 
 \subsection*{Packing}
 
 Because of the weight and size restrictions at the airports it can sometimes be difficult to get all the items you want to bring into a suitcase that is small enough and not exceed the allowed weight. It can sometimes be necessary to acquire more suitcases for the trip or leaving some of the items you wanted to bring. 
-Bringing more luggage means you have to pay more to get the extra luggage with you on the plane. A way you might be able to avoid buying and paying for extra suitcases is to pack the suitcases more that there is meant to be. This mean that the suitcases packed more compact. This on the other hand increases the bags weight \citep{altombag}. This should be thought through because too much weight can be unhealthy to carry around if the luggage is packed to heavily.
+Bringing more luggage means you have to pay more to get the extra luggage with you on the plane. A way you might be able to avoid buying and paying for extra suitcases is to pack the suitcases more than the suitcases are meant to contain. This mean that the suitcases packed more compact. This on the other hand increases the bags weight \citep{altombag}. This should be thought through because too much weight can be unhealthy to carry around.
 
 The increased weight means the bags might exceed the limit for weight and therefore trigger a fee for overweight luggage.
 It seems people often pack their luggage more compact instead of taking extra bags with them on vacation. Generally people take a lot with them on vacation and they might not have packed their luggage the most effective way \citep{airstat}.
