--- a/trunk/LaTeX/Undervejs/Future plans.tex
+++ b/trunk/LaTeX/Undervejs/Future plans.tex
@@ -5,25 +5,25 @@ To do list:
 This list contains all the features that has been deemed necessary for the basic part of program to work.
 
 \begin{itemize}
-\item[Program should be able to tell the user how much space is left.]
+\item Program should be able to tell the user how much space is left.
 This feature is essential to this program, because when packing a suitcase it is convenient to know how much space is left inside the suitcase. This can prove useful when determining how many extra items you can purchase or otherwise bring home with you from the trip. Furthermore it can be useful to determine whether or not to pack more items as long as one considers not to increase the weight too much.
 
-\item[Check luggage follows the security rules.]
+\item Check luggage follows the security rules.
 The security about luggage, especially the dimensions of it, vary greatly between the individual flight companies and that can lead to misunderstandings. A part of the project is to compare the most used flight companies in Denmark and their rules for dimensions of luggage, so it becomes easier for the user to see which flight company that allows which dimensions. 
 \end{itemize}
 
 Nice to have list:
 Items on this list have been deemed something that is not essential for the program to work. But would still make a nice addition to the program should there be time.
 \begin{itemize}
-\item[User should be able to change info in the program on the road.]
+\item User should be able to change info in the program on the road.
 A great feature that would become very useful for the individual, if the traveller's suitcase is too small and he/she buys another suitcase for the souvenirs. 
 
-\item[Program should tell where a person's things are in the suitcases if ones things are spread in more than one suitcase.]
+\item Program should tell where a person's things are in the suitcases if ones things are spread in more than one suitcase.
 This feature will make it easier for the users to find their items amongst their suitcases, in case they cannot remember which suitcase they put a specific item.
 
-\item[Most of ones things in own suitcase.]
+\item Most of ones things in own suitcase.
 When spreading luggage between different suitcases it is of course preferable to have most your own things in your own suitcase. Therefore a nice addition to the program would be, to be able to prioritize items to specific suitcases. This way every item will not be randomly spread between every suitcase, and in the end make a more clean and organized packing.
 
-\item[Can the things be packed in different sizes?]
+\item Can the things be packed in different sizes?
 Packing clothes and other items that can be folded, enables the dimensions to be rearrange, thus changing how the items will be packed. If implemented this will greatly increase the flexibility of the packing algorithm. But this feature is especially difficult to implement because of the great variety this imposes on the programming making it something to really think through before introducing into the code, as it might also alter how the core of the algorithm works.
 \end{itemize}
