--- a/trunk/LaTeX/Statuseminar - NIX PILLE/indhold/design/Specificationrequirement.tex
+++ b/trunk/LaTeX/Statuseminar - NIX PILLE/indhold/design/Specificationrequirement.tex
@@ -4,7 +4,7 @@ Through the problem analysis it has been documented that there are some strict r
 Furthermore another list have also been made composed of some additional features that would make the program better and more user friendly. They are not needed for the base requirements, but rather as improvements to further make the program ideal for the user.
 
 For the user to better get started on the program there will be a guide that come with the program. The guide gives an explanation on how to use the program. The guide will be short and well formulated so the user with ease can read and understand the guide.
-The project description states that the program language must be written in C#.
+The project description states that the program language must be written in C\#.
 The program itself needs to have a few features for it to solve the problem that is the focus of this project. The program needs to make sure that the weight is evenly distributed in the bags and that it does not exceed the bags weight limits. The program also needs to distribute the space of the bags to make sure that the program does not fill a bag more than there is physical room for.
 When the user is on the trip the program needs to have a function that allows the user to edit the list over items that are in the bag so if the user buys some souvenirs or throws something away, the list of items will be updated and thereby a new way to pack the luggage.
 The program will need a function to help the user see where the items are placed in the luggage.
@@ -18,8 +18,8 @@ Another nice feature to have is to save space for possible souvenirs the user mi
 \subsection{Targeted Features}
 These are the essential features that the program will have.\newline
 
-\textbf{program language is C#}:
-The program need to written in C# since the requirements for this project is that the program need to written in C#.
+\textbf{program language is C\#}:
+The program need to written in C\# since the requirements for this project is that the program need to written in C\#.
 
 \textbf{Guide the user}:
 The program will have a little "readme" file, or other form of guide, that will tell the customer how to use the program.
