--- a/trunk/LaTeX/Statuseminar - NIX PILLE/indhold/design/Solutionsuggestions.tex
+++ b/trunk/LaTeX/Statuseminar - NIX PILLE/indhold/design/Solutionsuggestions.tex
@@ -1,5 +1,5 @@
 \section{Solution suggestions} 	
-This section will focus on different solutions to the problem about packing a suitcase. Each solutions difficulties and benefits will be explained. At the last subsection a solution will be selected and the choice explained. The solutions have been chosen from the mind map that can be seen in appendix ?.
+This section will focus on different solutions to the problem about packing a suitcase. Each solutions difficulties and benefits will be explained. At the last subsection a solution will be selected and the choice explained. The solutions have been chosen from the mind map that can be seen in appendix \ref{chap:mindmap}.
 \newline
 \subsection{Application for smartphones}
 This idea is to make an application that helps the user pack one or more suitcases. The user will need to put in the height, length, depth, weight and a name of the items to pack. The application will then calculate if all the items can be packed. All of these calculations means the application will need a server to make the calculations. This requires the customer to have access to the internet on the phone to be able to use the program. At the last step the application will show the user where to place each item. This means that the customer will have easy access to the program everywhere the user might bring the smartphone as long as it has access to the internet. On the other hand people without a smartphone would not be able to use the program. This solution requires learning how to write applications for smartphones in C\# and therefore this solution requires modification to the time schedule. This solution is easy to bring everywhere because you rarely leave your phone. On the other hand people without a smartphone would not be able to use the program.
