--- a/trunk/LaTeX/preamble.tex
+++ b/trunk/LaTeX/preamble.tex
@@ -147,7 +147,7 @@ stringstyle=\color[rgb]{0.627,0.126,0.941}
 \makeevenhead{custom}{Group B130, Aalborg University}{P2}{\leftmark} % Definerer lige siders sidehoved efter modellen \makeevenhead{Navn}{Venstre}{Center}{Højre}
 \makeoddhead{custom}{Group B130, Aalborg University}{P2}{\leftmark} % Definerer ulige siders sidehoved efter modellen \makeoddhead{Navn}{Venstre}{Center}{Højre}
 
-\usepackage{lastpage}
+%\usepackage{lastpage}
 \usepackage{ifthen}
 \usepackage{intcalc}
 
