--- a/trunk/LaTeX/Skal sættes i rapport/solutiononthemarked.tex
+++ b/trunk/LaTeX/Skal sættes i rapport/solutiononthemarked.tex
@@ -11,7 +11,7 @@ First a look into these lists and guides and the more advance solution thereafte
 
 Packing pro is an app developed for the Iphone and Ipad that offers templates for check lists to the customer. Packing Pro uses a touch interface which means that the user by using the finger can navigate around.
 
-\figur{0.8}{Iphone.JPG}{Picture of 2 of Packing Pros menus from \citep{ipack}}{fig:ipack}
+\figur{0.8}{Iphone.JPG}{Picture of 2 of Packing Pros menus from \citep{packingpro}}{fig:ipack}
 
 Packing pro is designed with a panel in the bottom of the screen that allows the user navigate through the menus. Packing Pro provides the user with a help menu that contain information on how to use the app. On figure: \ref{fig:ipack} can an example of how a check list could look like.
 
@@ -26,7 +26,7 @@ A function that would not be needed is the compatible with Iphone/Ipad operating
 Checkmark Packlist is an free app for the smart phones running the Android system.
 Checkmark Packlist offers different templates for check lists that the customer can use. One of these templates is the list for packing for a trip. That way the customer can select and use this template for remembering what they will need to pack for the trip. Checkmark Packlist uses touch to navigated in the program. This means that the customer with their fingers can navigated through the check list and check off things that have been packed.
 
-\figur{0.4}{checkmark.JPG}{Picture of the Checkmark Packlist in action from \citep{checkparklist}}{fig:checkmark}
+\figur{0.4}{checkmark.JPG}{Picture of the Checkmark Packlist in action from \citep{checkpacklist}}{fig:checkmark}
 
 On figure: \ref{fig:checkmark} there can be seen an example of the product and how Pheckmark Packlist looks like for the user.
 Checkmark Packlist does not provide customization tool that let the customer add more categories to the check list. This is only a featured provided in the paid version of Checkmark Packlist \citep{checkpacklist}.
